# procrasturbate

./: .env.example  .gitignore  CLAUDE.md  README.md  example_code.py  procrasturbate-spec.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1ecea3dd7b08_initial.py  41dabc7f67fc_add_check_run_id_to_reviews.py  537432046e73_add_superseded_review_status.py  7922745ef546_add_model_and_prompts_to_reviews.py
docker/: Dockerfile  docker-compose.yml
docs/: github-app-setup.md
src/procrasturbate/: __init__.py  config.py  database.py  main.py
src/procrasturbate/api/: __init__.py  admin.py  health.py  router.py  ui.py  webhooks.py
src/procrasturbate/models/: __init__.py  installation.py  repository.py  review.py  review_comment.py  usage.py
src/procrasturbate/schemas/: __init__.py  admin.py  github_webhooks.py  repo_config.py  review.py
src/procrasturbate/services/: __init__.py  claude_client.py  comment_commands.py  config_loader.py  cost_tracker.py  diff_parser.py  github_client.py  installation_manager.py  review_engine.py
src/procrasturbate/tasks/: __init__.py  review_tasks.py  worker.py
src/procrasturbate/templates/: base.html
src/procrasturbate/templates/components/: _badge.html  _card.html  _pagination.html
src/procrasturbate/templates/dashboard/: index.html
src/procrasturbate/templates/installations/: _settings.html  detail.html  list.html
src/procrasturbate/templates/repositories/: detail.html  (+2 more)
src/procrasturbate/utils/: __init__.py  github_auth.py  logging.py
tests/: __init__.py  conftest.py  test_comment_commands.py  test_diff_parser.py
(+3 files in other folders)
